--- a/rtl/rtl.conf
+++ b/rtl/rtl.conf
@@ -463,3 +463,33 @@ include_list=[]
 define_list=[]
 top_module={"i2c_master_top":["i2c_top", "i2c_top2"]}
 
+[i2c_slave_1]
+src_file=["rtl/i2c_slave/cases/w1/i2c_slave.v"]
+test_bench=rtl/i2c_slave/cases/w1/testbench.v
+orig_file=rtl/i2c_slave/cases/w1/i2c_slave_orig.v
+proj_dir=rtl/i2c_slave/cases/w1
+oracle_output=rtl/i2c_slave/cases/w1/oracle_tb.txt
+sim_output=rtl/i2c_slave/cases/w1/test.txt
+oracle_vcd=rtl/i2c_slave/cases/w1/oracle_tb.vcd
+sim_vcd=rtl/i2c_slave/cases/w1/test.vcd
+spec_file=rtl/i2c_slave/cases/w1/design_description.txt
+include_list=[]
+define_list=[]
+top_module={"i2c_slave_model":["i2c_slave"]}
+
+[i2c_slave_2]
+src_file=["rtl/i2c_slave/cases/w2/i2c_slave.v"]
+test_bench=rtl/i2c_slave/cases/w2/testbench.v
+orig_file=rtl/i2c_slave/cases/w2/i2c_slave_orig.v
+proj_dir=rtl/i2c_slave/cases/w2
+oracle_output=rtl/i2c_slave/cases/w2/oracle_tb.txt
+sim_output=rtl/i2c_slave/cases/w2/test.txt
+oracle_vcd=rtl/i2c_slave/cases/w2/oracle_tb.vcd
+sim_vcd=rtl/i2c_slave/cases/w2/test.vcd
+spec_file=rtl/i2c_slave/cases/w2/design_description.txt
+include_list=[]
+define_list=[]
+top_module={"i2c_slave_model":["i2c_slave"]}
+
+
+
